# medtracker-win

./: README.md  __main__.py  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml
scripts/: install.ps1
util/: paths.py
